table footer overflow fix

--- a/FirstNationalBank/wwwroot/css/profile.css
+++ b/FirstNationalBank/wwwroot/css/profile.css
@@ -39,6 +39,7 @@
 
 table {
     border-collapse: collapse;
+    margin-bottom: 60px;
     table-layout: auto;
     width: 85%;
 }
